--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -4,6 +4,7 @@ ja:
       cd: CD
       disc: ディスク
       song: 曲
+      client: ユーザ
     attributes:
       cd:
         name: CD名
@@ -15,3 +16,13 @@ ja:
       discs/songs:
         song_name: 曲名
         song_number: 曲順
+      client:
+          last_name: 姓
+          first_name: 名
+          last_name_kana: 姓（カナ）
+          first_name_kana: 名（カナ）
+          email: メールアドレス
+          address: 住所
+          post_code: 郵便番号
+          telephone: 電話番号
+          password: パスワード
